Commit Lab2 Training Implementation